# Background

./: .gitignore  .gitignore.swp  CMakeLists.txt  LICENSE.txt  README.md  install_osx.sh  install_unix.sh
data/: pollux_psd.txt
include/: BackgroundModel.h  FaculaeBackgroundModel.h  FlatBackgroundModel.h  FlatNoGaussianBackgroundModel.h  FullBackgroundModel.h  GlobalFitMSModel.h  GlobalFitModel.h  GlobalFitRGModel.h  GranulationBackgroundModel.h  GranulationFaculaeMSModel.h  GranulationMSModel.h  MainSequenceBackgroundModel.h  NoGaussianBackgroundModel.h  NoGaussianNoColoredBackgroundModel.h  OneHarveyBackgroundModel.h  OneHarveyColorBackgroundModel.h  OneHarveyFreeSlopeBackgroundModel.h  OneHarveyFreeSlopeNoGaussianBackgroundModel.h  OneHarveyNoGaussianBackgroundModel.h  OriginalBackgroundModel.h  RedGiantBackgroundModel.h  RedGiantFullBackgroundModel.h  SimpleBackgroundModel.h  StandardBackgroundModel.h  StandardSlopeBackgroundModel.h  ThreeHarveyBackgroundModel.h  ThreeHarveyColorBackgroundModel.h  ThreeHarveyColorNoGaussianBackgroundModel.h  ThreeHarveyNoGaussianBackgroundModel.h  TwoHarveyBackgroundModel.h  TwoHarveyColorBackgroundModel.h  TwoHarveyNoGaussianBackgroundModel.h  TwoHarveyTwoGaussianBackgroundModel.h
source/: Background.cpp  BackgroundModel.cpp  FaculaeBackgroundModel.cpp  FlatBackgroundModel.cpp  FlatNoGaussianBackgroundModel.cpp  FullBackgroundModel.cpp  GlobalFitMSModel.cpp  GlobalFitModel.cpp  GlobalFitRGModel.cpp  GranulationBackgroundModel.cpp  GranulationFaculaeMSModel.cpp  GranulationMSModel.cpp  MainSequenceBackgroundModel.cpp  NoGaussianBackgroundModel.cpp  NoGaussianNoColoredBackgroundModel.cpp  OneHarveyBackgroundModel.cpp  OneHarveyColorBackgroundModel.cpp  OneHarveyFreeSlopeBackgroundModel.cpp  OneHarveyFreeSlopeNoGaussianBackgroundModel.cpp  OneHarveyNoGaussianBackgroundModel.cpp  OriginalBackgroundModel.cpp  RedGiantBackgroundModel.cpp  RedGiantFullBackgroundModel.cpp  SimpleBackgroundModel.cpp  StandardBackgroundModel.cpp  StandardSlopeBackgroundModel.cpp  (+8 more)
(+15 files in other folders)
